--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.9"
 [tool.poetry.dev-dependencies]
 black = "^21.10b0"
 flake8 = "^4.0.1"
+bandit = "^1.7.1"
 
 [tool.poetry.scripts]
 smtp_verifier = "smtp_verifier.cli:main"
