--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,16 +10,18 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 
 [tool.poetry.dev-dependencies]
-black = "^21.10b0"
-flake8 = "^4.0.1"
 
 [tool.poetry.scripts]
 smtp_verifier = "smtp_verifier.cli:main"
 slowloris = "slowloris.cli:main"
 entropy = "entropy.cli:main"
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.12.0"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
